# radial-diagram

./: .gitignore  CHANGELOG.md  LICENSE  PACKAGE_STATUS.md  PUBLISH.md  README.md  USAGE_EXAMPLE.md  index.html  package-lock.json  package.json  tsconfig.json
demo/: editor.html  index.html  radial-diagram.html
demo/configs/: brokers-ireland-maturity.json  business-intelligence.json  digital-maturity.json  digital-transformation.json  example.json  pmo-maturity.json
python/: README.md  pyproject.toml
python/radial_diagram/: __init__.py  geometry.py  svg.py  types.py
python/tests/: test_equivalence.py  test_geometry.py  test_svg.py  test_types.py
scripts/: build-standalone.js
src/: index.ts
src/core/: geometry.test.ts  geometry.ts  types.test.ts  types.ts
src/renderers/: svg.test.ts  svg.ts
tests/shared/: README.md  build-py-renders.py  diff.py  regenerate-ts-goldens.mjs  svg-to-png-lib.mjs  svg-to-png.mjs
tests/shared/configs/: tier-00-minimal.json  tier-01-scores.json  tier-02-rings.json  tier-03-score-labels.json  tier-04-dividers-points.json  tier-05-segment-labels-outer.json  tier-06-segment-labels-inner.json  tier-07-multiline-labels.json  tier-08-flow-arrows.json  tier-09-flow-close-loop.json  tier-10-full.json  tier-11-alpha.json  tier-12-sublabels-track.json  tier-13-diagnostic-2b.json
